syntax = "proto3";

option go_package = "github.com/rl404/akatsuki/internal/delivery/grpc/schema";

import "enum.proto";

message GetAnimeByIDRequest {
    int64 id = 1;
}

message GetAnimeByIDResponse {
    Anime data = 1;
}

message Anime {
    int64 id = 1;
    string title = 2;
    AlternativeTitles alternative_titles = 3;
    string picture = 4;
    Date start_date = 5;
    Date end_date = 6;
    string synopsis = 7;
    string background= 8;
    bool nsfw = 9;
    Type type = 10;
    Status status = 11;
    Episode episode = 12;
    AnimeSeason season = 13;
    Broadcast broadcast = 14;
    Source source = 15;
    Rating rating = 16;
    double mean = 17;
    int32 rank = 18;
    int32 popularity = 19;
    int32 member = 20;
    int32 voter = 21;
    Stats stats = 22;
    repeated AnimeGenre genres = 23;
    repeated string pictures = 24;
    repeated AnimeRelated related = 25;
    repeated AnimeStudio studios = 26;
}

message AlternativeTitles {
    repeated string synonyms = 1;
    string english = 2;
    string japanese = 3;
}

message Date {
    int32 year = 1;
    int32 month = 2;
    int32 day = 3;
}

message Episode {
    int32 count = 1;
    int32 duration = 2;
}

message AnimeSeason {
    Season season = 1;
    int32 year = 2;
}

message Broadcast {
    Day day = 1;
    string time = 2;
}

message Stats {
    StatsStatus status = 1;
}

message StatsStatus {
    int32 watching = 1;
    int32 completed = 2;
    int32 on_hold = 3;
    int32 dropped = 4;
    int32 planned = 5;
}

message AnimeGenre {
    int64 id = 1;
    string name = 2;
}

message AnimeRelated {
    int64 id = 1;
    string title = 2;
    string picture = 3;
    Relation relation = 4;
}

message AnimeStudio {
    int64 id = 1;
    string name = 2;
}